Update the email in pipeline